--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -24,28 +24,28 @@
     margin-bottom: 20px;
 }
 
-.product {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .product-container {
     display: flex;
-    flex-direction: column;
     margin-bottom: 10px;
     border: 1px solid #ccc;
 }
 
 .product-photo {
-    width: 18%;
-    border-right: 1px solid #ccc;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex: 1;
+    border-right: 1px solid #ccc;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+    min-width: 125px;
+}
+
+.product-photo img {
+    max-height: 120px;
+    max-width: 120px;
 }
 
 .product-information {
-    width: 42%;
+    flex: 4;
 }
 
 .product-information div {
@@ -58,17 +58,14 @@
 }
 
 .product-options {
-    text-align: right;
-    width: 25%;
+    flex: 1;
+    justify-content: center; /* align horizontal */
+    min-width: 120px;
 }
 
 .product-data {
     padding: 20px;
-}
-
-.product-data img {
-    max-height: 150px;
-    max-width: 150px;
+    min-width: 120px;
 }
 
 .product-options div {
@@ -76,6 +73,25 @@
 }
 
 .remove-button {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 200;
+}
+
+@media ( max-width: 630px ) {
+    .product-container {
+        flex-direction: column;
+    }
+
+    .product-photo {
+        border-right: 0px;
+        justify-content: flex-start; /* align horizontal */
+        align-items: flex-start; /* align vertical */
+        min-width: 125px;
+        padding-bottom: 0px;
+    }
+
+    .product-information {
+        padding-bottom: 0px;
+    }
+
 }
