--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -77,6 +77,16 @@
     font-weight: 200;
 }
 
+.contact-form-container {
+    margin-top: 20px;
+}
+
+.form-info {
+    font-size: 25px;
+    font-weight: 200;
+    margin-bottom: 20px;
+}
+
 @media ( max-width: 630px ) {
     .product-container {
         flex-direction: column;
